test/fail_compilation/json2.d
/*
REQUIRED_ARGS: -Xi=
TEST_OUTPUT:
---
Error: argument expected for switch '-Xi='
       run 'dmd -man' to open browser on manual
---
*/
